--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "devDependencies": {
         "cross-env": "^5.2.0",
         "css-loader": "^2.1.1",
+        "file-loader": "^5.0.2",
         "mini-css-extract-plugin": "^0.6.0",
         "node-sass": "^4.13.0",
         "serve": "^11.0.0",
@@ -12,6 +13,7 @@
         "svelte": "^3.0.0",
         "svelte-loader": "2.13.3",
         "svelte-preprocess": "^3.3.0",
+        "svg-inline-loader": "^0.8.0",
         "webpack": "^4.30.0",
         "webpack-cli": "^3.3.0",
         "webpack-dev-server": "^3.3.1"
